1st section done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="first_sec">
+        <div class="text1">
+            <h1>It’s <span>Burger</span> O’clock, Extra <span>Cheese</span>, please </h1>
+            <p class="p1">Burgers are good sources of protein, iron and vitamin B12, they come with a lot of problems, according 
+            to nutrition experts—particularly the fatty meat, sugary ketchup and refined grain buns.</p>
+            <a target="_blank" href="https://www.facebook.com/tasbiulolive">Order Food</a>
+        </div>
+        <div class="pic1"><img src="images/pic1.png" alt="1st Picture"></div>
+    </section>
 </body>
 </html>
