--- a/index.html
+++ b/index.html
@@ -20,5 +20,40 @@
         </div>
         <div class="pic1"><img src="images/pic1.png" alt="1st Picture"></div>
     </section>
+
+    <section class="second_sec">
+        <div class="pic2"><img src="images/pic2.png" alt="pic2"></div>
+        <div class="text2">
+            <h1>About  Our <span>Burger</span></h1>
+            <p class="p1">A hamburger is a food, typically considered a sandwich, consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun. 
+                The patty may be pan fried, grilled, smoked or flame broiled.</p>
+                <a target="_blank" href="https://www.facebook.com/tasbiulolive">Contract Us</a>
+        </div>
+    </section>
+    <section class="third_sec">
+        <div class="recipies">
+            <h1><span>Our Recipies</span> </h1>
+            <p class="p1">We have exclusive recipies. <br> Check out below & Get access to exclusive coupons. <br> Discover our menu and order delivery or pick up from a <span>Burger Petuk</span>  near you.</p>
+        </div>
+        <div class="recipies_box">
+            <div>
+                <img src="images/food/Project Cover.jpg" alt="recipies 1">
+                <h3>Cereal</h3>
+                <p>Cereal, often called breakfast cereal is a traditional breakfast food made from processed cereal grains. 
+                    It is traditionally eaten as part of a balanced breakfast.</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover.png" alt="recipies 2">
+                <h3>Butternut Squash</h3>
+                <p>This soup uses a whole butternut squash, but if you don’t like chopping up squashes, 
+                    the supermarkets do packs of ready chopped squash in the freezer department, making this a handy standby meal.</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover1.jpg" alt="recipies 3">
+                <h3>Cold Entrée Meat</h3>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
