--- a/index.html
+++ b/index.html
@@ -36,24 +36,30 @@
             <p class="p1">We have exclusive recipies. <br> Check out below & Get access to exclusive coupons. <br> Discover our menu and order delivery or pick up from a <span>Burger Petuk</span>  near you.</p>
         </div>
         <div class="recipies_box">
-            <div>
-                <img src="images/food/Project Cover.jpg" alt="recipies 1">
+            <div class="box">
+                <img src="images/food/Project Cover.jpg" alt="recipies 1"> <br>
                 <h3>Cereal</h3>
-                <p>Cereal, often called breakfast cereal is a traditional breakfast food made from processed cereal grains. 
+                <p class="box_p"><span>Cereal</span>, often called breakfast cereal is a traditional breakfast food made from processed cereal grains. 
                     It is traditionally eaten as part of a balanced breakfast.</p>
             </div>
-            <div>
-                <img src="images/food/Project Cover.png" alt="recipies 2">
+            <div class="box">
+                <img src="images/food/Project Cover.png" alt="recipies 2"> <br>
                 <h3>Butternut Squash</h3>
-                <p>This soup uses a whole butternut squash, but if you don’t like chopping up squashes, 
+                <p class="box_p">This soup uses a whole <span>Butternut Squash</span>, but if you don’t like chopping up squashes, 
                     the supermarkets do packs of ready chopped squash in the freezer department, making this a handy standby meal.</p>
             </div>
-            <div>
-                <img src="images/food/Project Cover1.jpg" alt="recipies 3">
+            <div class="box">
+                <img src="images/food/Project Cover1.jpg" alt="recipies 3"><br>
                 <h3>Cold Entrée Meat</h3>
+                <p class="box_p"> <span>Cold meats</span> —also known as cold cuts, luncheon meats, cooked meats, sliced meats, lunch meats and deli meats—are precooked or cured meat, often sausages or meat loaves, 
+                    that are sliced and served cold or hot on sandwiches or on party trays.</p>
             </div>
         </div>
 
     </section>
+    <footer>
+        <h2><span>FOOD</span> NETWORK</h2>
+        <p>Eat healthy to live healhy. Live healthy to live happy.</p>
+    </footer>
 </body>
 </html>
