--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="navbar">
+        <div>
+            <p class="food_network">FOOD NETWORK</p>
+            <ul>
+                
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#contact">Recipies</a></li>
+                <li><a href="#about">About</a></li>
+                
+              </ul>
+        </div>
+    </section>
     <section class="first_sec">
         <div class="text1">
             <h1>It’s <span>Burger</span> O’clock, Extra <span>Cheese</span>, please </h1>
             <p class="p1">Burgers are good sources of protein, iron and vitamin B12, they come with a lot of problems, according 
             to nutrition experts—particularly the fatty meat, sugary ketchup and refined grain buns.</p>
-            <a target="_blank" href="https://www.facebook.com/tasbiulolive">Order Food</a>
+            <a class="button" target="_blank" href="https://www.facebook.com/tasbiulolive">Order Food</a>
         </div>
         <div class="pic1"><img src="images/pic1.png" alt="1st Picture"></div>
     </section>
@@ -27,7 +39,7 @@
             <h1>About  Our <span>Burger</span></h1>
             <p class="p1">A hamburger is a food, typically considered a sandwich, consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun. 
                 The patty may be pan fried, grilled, smoked or flame broiled.</p>
-                <a target="_blank" href="https://www.facebook.com/tasbiulolive">Contract Us</a>
+                <a class="button" target="_blank" href="https://www.facebook.com/tasbiulolive">Contract Us</a>
         </div>
     </section>
     <section class="third_sec">
