Added rating part

--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
         </div>
 
     </section>
+    <section class="fourth_sec">
+        <div class="rating">
+            <h2>700K</h2>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="rating">
+            <h2>2.8m</h2>
+            <p>Instragram Followers</p>
+        </div>
+        <div class="rating">
+            <h2>100K</h2>
+            <p>Dribble Shot Likes</p>
+        </div>
+
+    </section>
     <footer>
         <h2><span>FOOD</span> NETWORK</h2>
         <p>Eat healthy to live healhy. Live healthy to live happy.</p>
