--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <section class="third_sec">
         <div class="recipies">
-            <h1><span>Our Recipies</span> </h1>
+            <h1>Our<span> Recipies</span> </h1>
             <p class="p1">We have exclusive recipies. <br> Check out below & Get access to exclusive coupons. <br> Discover our menu and order delivery or pick up from a <span>Burger Petuk</span>  near you.</p>
         </div>
         <div class="recipies_box">
