--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="navbar">
@@ -81,6 +82,34 @@
         <div class="rating">
             <h2>100K</h2>
             <p>Dribble Shot Likes</p>
+        </div>
+
+    </section>
+    <section class="fifth_sec">
+        <div class="review">
+            <img src="images/squre1.jpg" alt="">
+            <h2>Tasbiul's Review</h2> <br>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star "></span>
+            <span class="fa fa-star "></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span> <br>
+            <p>First time in (RN) and YOU have to go! It’s the cutest little spot with amazing food. 
+                The (FN) is to die for. IT WAS FIRE!! The service we received was so amazing and we will definitely be back again. 
+                They made us feel welcomed and gave us an amazing experience.</p>
+        </div>
+        <div class="review">
+            <img src="images/squre2.jpg" alt="">
+            <h2>Samia's Review</h2> <br>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star "></span>
+            <span class="fa fa-star "></span>
+            <span class="fa fa-star"></span> <br>
+            <p>It’s a great experience. The ambiance is very welcoming and charming. Amazing wines, food and service. 
+                Staff are extremely knowledgeable and make great recommendations.
+            </p>
+
         </div>
 
     </section>
