--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     </section>
     <div class="review_h1">
-        <h1> <span>People's Review</span> Section </h1>
+        <h1> People's <span> Review</span> Section </h1>
     </div>
     <section class="fifth_sec">
         
